# Introduction-to-libraries-with-CMake

./: CMakeLists.txt
examples/: Main.cpp  Main.cpp.bak
foo/: CMakeLists.txt
foo/include/: CMakeLists.txt
foo/include/Foo/: CMakeLists.txt  Hello.h
foo/src/: CMakeLists.txt
foo/src/Foo/: CMakeLists.txt  Hello.cpp  Hello.cpp.bak
